--- a/cpa-icons-v1.0/variables.scss
+++ b/cpa-icons-v1.0/variables.scss
@@ -1,6 +1,17 @@
 $icomoon-font-family: "cpa-icons" !default;
 $icomoon-font-path: "fonts" !default;
 
+$cpa-icon-download: unquote('"\\e945"');
+$cpa-icon-not-upload: unquote('"\\e946"');
+$cpa-icon-create-profile: unquote('"\\e97c"');
+$cpa-icon-disabling-profile: unquote('"\\e97d"');
+$cpa-icon-enabling-profile: unquote('"\\e97e"');
+$cpa-icon-remove-profile: unquote('"\\e97f"');
+$cpa-icon-file-info1: unquote('"\\e980"');
+$cpa-icon-upload: unquote('"\\e981"');
+$cpa-icon-create-module: unquote('"\\e982"');
+$cpa-icon-x: unquote('"\\e983"');
+$cpa-icon-remove-module: unquote('"\\e984"');
 $cpa-icon-access-path1: unquote('"\\e900"');
 $cpa-icon-access-path2: unquote('"\\e901"');
 $cpa-icon-access-path3: unquote('"\\e902"');
