--- a/docs/cpa/cpa-icons-v1.0/variables.scss
+++ b/docs/cpa/cpa-icons-v1.0/variables.scss
@@ -1,6 +1,11 @@
 $icomoon-font-family: "cpa-icons" !default;
 $icomoon-font-path: "fonts" !default;
 
+$cpa-icon-keyboard-o: unquote('"\\e988"');
+$cpa-icon-zoom-in: unquote('"\\e985"');
+$cpa-icon-plus: unquote('"\\e986"');
+$cpa-icon-eye-plus: unquote('"\\e987"');
+$cpa-icon-password: unquote('"\\e989"');
 $cpa-icon-download: unquote('"\\e945"');
 $cpa-icon-not-upload: unquote('"\\e946"');
 $cpa-icon-create-profile: unquote('"\\e97c"');
