--- a/cpa-icons-v1.0/style.scss
+++ b/cpa-icons-v1.0/style.scss
@@ -3,9 +3,9 @@
 @font-face {
   font-family: '#{$icomoon-font-family}';
   src:
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?mymubr') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?mymubr') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?mymubr##{$icomoon-font-family}') format('svg');
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?c0z69i') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?c0z69i') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?c0z69i##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -26,9 +26,64 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.cpa-icon-minus-circle {
+  &:before {
+    content: $cpa-icon-minus-circle; 
+  }
+}
+.cpa-icon-chevron-circle-down {
+  &:before {
+    content: $cpa-icon-chevron-circle-down; 
+  }
+}
+.cpa-icon-chevron-circle-up {
+  &:before {
+    content: $cpa-icon-chevron-circle-up; 
+  }
+}
+.cpa-icon-chevron-circle-right {
+  &:before {
+    content: $cpa-icon-chevron-circle-right; 
+  }
+}
+.cpa-icon-chevron-circle-left {
+  &:before {
+    content: $cpa-icon-chevron-circle-left; 
+  }
+}
 .cpa-icon-keyboard-o {
   &:before {
     content: $cpa-icon-keyboard-o; 
+  }
+}
+.cpa-icon-radio-unchecked {
+  &:before {
+    content: $cpa-icon-radio-unchecked; 
+  }
+}
+.cpa-icon-radio-checked {
+  &:before {
+    content: $cpa-icon-radio-checked; 
+  }
+}
+.cpa-icon-circle-left {
+  &:before {
+    content: $cpa-icon-circle-left; 
+  }
+}
+.cpa-icon-circle-right {
+  &:before {
+    content: $cpa-icon-circle-right; 
+  }
+}
+.cpa-icon-circle-up {
+  &:before {
+    content: $cpa-icon-circle-up; 
+  }
+}
+.cpa-icon-circle-down {
+  &:before {
+    content: $cpa-icon-circle-down; 
   }
 }
 .cpa-icon-zoom-in {
@@ -674,9 +729,9 @@
     content: $cpa-icon-x-square; 
   }
 }
-.cpa-icon-minus-circle {
+.cpa-icon-minus-circle1 {
   &:before {
-    content: $cpa-icon-minus-circle; 
+    content: $cpa-icon-minus-circle1; 
   }
 }
 .cpa-icon-forbidden {
