--- a/docs/cpa/cpa-icons-v1.0/style.css
+++ b/docs/cpa/cpa-icons-v1.0/style.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'cpa-icons';
   src:
-    url('fonts/cpa-icons.ttf?mymubr') format('truetype'),
-    url('fonts/cpa-icons.woff?mymubr') format('woff'),
-    url('fonts/cpa-icons.svg?mymubr#cpa-icons') format('svg');
+    url('fonts/cpa-icons.ttf?c0z69i') format('truetype'),
+    url('fonts/cpa-icons.woff?c0z69i') format('woff'),
+    url('fonts/cpa-icons.svg?c0z69i#cpa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -24,8 +24,41 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.cpa-icon-minus-circle:before {
+  content: "\e994";
+}
+.cpa-icon-chevron-circle-down:before {
+  content: "\e98a";
+}
+.cpa-icon-chevron-circle-up:before {
+  content: "\e98b";
+}
+.cpa-icon-chevron-circle-right:before {
+  content: "\e98c";
+}
+.cpa-icon-chevron-circle-left:before {
+  content: "\e98d";
+}
 .cpa-icon-keyboard-o:before {
   content: "\e988";
+}
+.cpa-icon-radio-unchecked:before {
+  content: "\e992";
+}
+.cpa-icon-radio-checked:before {
+  content: "\e993";
+}
+.cpa-icon-circle-left:before {
+  content: "\e98e";
+}
+.cpa-icon-circle-right:before {
+  content: "\e98f";
+}
+.cpa-icon-circle-up:before {
+  content: "\e990";
+}
+.cpa-icon-circle-down:before {
+  content: "\e991";
 }
 .cpa-icon-zoom-in:before {
   content: "\e985";
@@ -418,7 +451,7 @@
 .cpa-icon-x-square:before {
   content: "\e970";
 }
-.cpa-icon-minus-circle:before {
+.cpa-icon-minus-circle1:before {
   content: "\e971";
 }
 .cpa-icon-forbidden:before {
