--- a/cpa-icons-v1.0/variables.scss
+++ b/cpa-icons-v1.0/variables.scss
@@ -1,6 +1,15 @@
 $icomoon-font-family: "cpa-icons" !default;
 $icomoon-font-path: "fonts" !default;
 
+$cpa-icon-ingresos: unquote('"\\e995"');
+$cpa-icon-deducciones: unquote('"\\e996"');
+$cpa-icon-nomina: unquote('"\\e997"');
+$cpa-icon-retenciones: unquote('"\\e998"');
+$cpa-icon-complementos-pago: unquote('"\\e999"');
+$cpa-icon-cfdis: unquote('"\\e99a"');
+$cpa-icon-cfdis-nominas: unquote('"\\e99b"');
+$cpa-icon-ingresos-plus: unquote('"\\e99c"');
+$cpa-icon-salud-financiera: unquote('"\\e99d"');
 $cpa-icon-minus-circle: unquote('"\\e994"');
 $cpa-icon-chevron-circle-down: unquote('"\\e98a"');
 $cpa-icon-chevron-circle-up: unquote('"\\e98b"');
@@ -9,6 +18,8 @@ $cpa-icon-chevron-circle-left: unquote('"\\e98d"');
 $cpa-icon-keyboard-o: unquote('"\\e988"');
 $cpa-icon-radio-unchecked: unquote('"\\e992"');
 $cpa-icon-radio-checked: unquote('"\\e993"');
+$cpa-icon-pin: unquote('"\\e900"');
+$cpa-icon-pin-circle: unquote('"\\e901"');
 $cpa-icon-circle-left: unquote('"\\e98e"');
 $cpa-icon-circle-right: unquote('"\\e98f"');
 $cpa-icon-circle-up: unquote('"\\e990"');
@@ -28,13 +39,6 @@ $cpa-icon-upload: unquote('"\\e981"');
 $cpa-icon-create-module: unquote('"\\e982"');
 $cpa-icon-x: unquote('"\\e983"');
 $cpa-icon-remove-module: unquote('"\\e984"');
-$cpa-icon-access-path1: unquote('"\\e900"');
-$cpa-icon-access-path2: unquote('"\\e901"');
-$cpa-icon-access-path3: unquote('"\\e902"');
-$cpa-icon-access-path4: unquote('"\\e903"');
-$cpa-icon-access-path5: unquote('"\\e904"');
-$cpa-icon-access-path6: unquote('"\\e905"');
-$cpa-icon-access-path7: unquote('"\\e906"');
 $cpa-icon-refresh: unquote('"\\e907"');
 $cpa-icon-refresh-circle: unquote('"\\e908"');
 $cpa-icon-arrow-down: unquote('"\\e909"');
