--- a/risk-pug/layouts/page.pug
+++ b/risk-pug/layouts/page.pug
@@ -1,3 +1,5 @@
+include ./menus.pug
+include ../mixins/blocks.pug
 block vars
 doctype html
 html(lang='es')
@@ -10,7 +12,7 @@ html(lang='es')
 
     // STYLES libraries
     //  Google Material Symbols  
-    link(href='https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined' rel='stylesheet')
+    link(href='https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200' rel='stylesheet')
     //  Font awesome  
     link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css' rel='stylesheet')
     //  Tempus Dominus Styles 
