se agrega clase para encapsular estilos del tema

--- a/risk-pug/layouts/page.pug
+++ b/risk-pug/layouts/page.pug
@@ -34,7 +34,7 @@ html(lang='es')
     //  Tempus Dominus JavaScript 
     script(src='https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.9.4/dist/js/tempus-dominus.min.js' crossorigin='anonymous')
     block scripts
-  body
+  body.cpa-theme
   
     // Contenido
     block content
